tests/invalid/for_in_requires_array.wio
fn Entry() -> i32 {
    let value: i32 = 42;

    for item in value {
        break;
    }

    return 0;
}
